--- a/templates/chat.html
+++ b/templates/chat.html
@@ -32,7 +32,7 @@ src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
    if (!window["WebSocket"]) {
      alert("Error: Your browser does not support web sockets.")
    } else {
-     socket = new WebSocket("ws://localhost:8080/room");
+     socket = new WebSocket("ws://{{.Host}}/room");
      socket.onclose = function() {
        alert("Connection has been closed.");
      }
